--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,9 @@ http {
     client_max_body_size 0;  # don't check body size
 
     include /etc/nginx/conf.d/*.conf;
+
+    set_real_ip_from {{ $.Env.UPSTREAM_HAPROXY_IP }};
+    real_ip_header proxy_protocol;
 }
 daemon off;
 
