--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,7 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 
-    set_real_ip_from {{ $.Env.UPSTREAM_HAPROXY_IP }};
+    set_real_ip_from <<to-be-filled>>;
     real_ip_header proxy_protocol;
 }
 daemon off;
